src/objects/Holiday__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Holiday_Country__c</fullName>
        <label>Holiday Country</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Date__c</fullName>
        <label>Holiday Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Holiday_Description__c</fullName>
        <label>Holiday Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Holiday_Type__c</fullName>
        <label>Holiday Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Year__c</fullName>
        <label>Holiday Year</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Holiday</label>
</CustomObject>